[gd_scene load_steps=33 format=2]

[ext_resource path="res://img/demon/walk/demon_walk1.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://img/demon/walk/demon_walk2.png" type="Texture" id=3]
[ext_resource path="res://img/demon/walk/demon_walk4.png" type="Texture" id=4]
[ext_resource path="res://img/demon/walk/demon_walk3.png" type="Texture" id=5]
[ext_resource path="res://img/demon/walk/demon_walk5.png" type="Texture" id=6]
[ext_resource path="res://img/demon/walk/demon_walk6.png" type="Texture" id=7]
[ext_resource path="res://img/demon/walk/demon_walk8.png" type="Texture" id=8]
[ext_resource path="res://img/demon/walk/demon_walk7.png" type="Texture" id=9]
[ext_resource path="res://img/demon/walk/demon_walk9.png" type="Texture" id=10]
[ext_resource path="res://img/demon/walk/demon_walk10.png" type="Texture" id=11]
[ext_resource path="res://img/demon/walk/demon_walk11.png" type="Texture" id=12]
[ext_resource path="res://img/demon/walk/demon_walk12.png" type="Texture" id=13]
[ext_resource path="res://img/demon/idle/demon_idle1.png" type="Texture" id=14]
[ext_resource path="res://img/demon/idle/demon_idle3.png" type="Texture" id=15]
[ext_resource path="res://img/demon/idle/demon_idle2.png" type="Texture" id=16]
[ext_resource path="res://img/demon/idle/demon_idle4.png" type="Texture" id=17]
[ext_resource path="res://img/demon/idle/demon_idle5.png" type="Texture" id=18]
[ext_resource path="res://img/demon/idle/demon_idle6.png" type="Texture" id=19]
[ext_resource path="res://img/demon/idle/demon_idle7.png" type="Texture" id=20]
[ext_resource path="res://img/demon/idle/demon_idle8.png" type="Texture" id=21]
[ext_resource path="res://img/demon/idle/demon_idle9.png" type="Texture" id=22]
[ext_resource path="res://img/demon/idle/demon_idle11.png" type="Texture" id=23]
[ext_resource path="res://img/demon/idle/demon_idle10.png" type="Texture" id=24]
[ext_resource path="res://img/demon/idle/demon_idle12.png" type="Texture" id=25]
[ext_resource path="res://scenes/CircularAttackArea.tscn" type="PackedScene" id=26]
[ext_resource path="res://scenes/RangeAttackArea.tscn" type="PackedScene" id=27]
[ext_resource path="res://scenes/HealthBar.tscn" type="PackedScene" id=32]
[ext_resource path="res://scenes/StaminaBar.tscn" type="PackedScene" id=33]
[ext_resource path="res://img/stamina_bar/border.png" type="Texture" id=34]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 25 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "walk",
"speed": 11.0
} ]

[sub_resource type="CircleShape2D" id=2]

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 2 )
attack_area_scene = ExtResource( 27 )
special_area_scene = ExtResource( 26 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource( 2 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -87.0
margin_right = 64.0
margin_bottom = -57.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" parent="UI" instance=ExtResource( 32 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 0.0
margin_right = 120.0
margin_bottom = 20.0
rect_scale = Vector2( 0.6, 0.6 )
value = 50.0

[node name="StaminaBar" parent="UI" instance=ExtResource( 33 )]
margin_left = 13.708
margin_top = 15.0
margin_right = -14.292
margin_bottom = 1.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 50, 8 )
value = 33.0
texture_over = ExtResource( 34 )

[node name="StaminaTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="StaminaTimer" to="." method="_on_StaminaTimer_timeout"]
